trunk/Archive2/74/24e5add5dc275d/output
main.cpp: In function 'int main()':
main.cpp:4:35: error: conversion from 'int*' to non-scalar type 'std::unique_ptr<int>' requested
     std::unique_ptr<int> p2 = new int; // error
                                   ^
